Added email service

--- a/hospitality-hub/src/main/resources/application.properties
+++ b/hospitality-hub/src/main/resources/application.properties
@@ -13,3 +13,13 @@ spring.jpa.show-sql=true
 
 jwt.secret=G3n3r4t3dS3cr3t
 jwt.expiration=604800000
+
+##email configuration
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=subratthapa2018@gmail.com
+spring.mail.password=skib vsmg kthp vgml
+spring.mail.protocol=smtp
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.debug=true
