--- a/hospitality-hub/src/main/resources/application.properties
+++ b/hospitality-hub/src/main/resources/application.properties
@@ -2,13 +2,13 @@ spring.application.name=hospitality-hub
 
 server.port=9090
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/hospitality-hub
-spring.datasource.username=postgres
-spring.datasource.password=root
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-
+spring.datasource.url=jdbc:mysql://localhost:3306/hospitality-hub?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=Rimesh12345@@
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
+
 spring.jpa.show-sql=true
 
 jwt.secret=G3n3r4t3dS3cr3t
