--- a/hospitality-hub/pom.xml
+++ b/hospitality-hub/pom.xml
@@ -45,6 +45,12 @@
 <!--			<scope>runtime</scope>-->
 <!--		</dependency>-->
 		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.0.3</version>
+		</dependency>
+
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.32</version> <!-- Use the appropriate version -->
