--- a/hospitality-hub/src/main/resources/application.properties
+++ b/hospitality-hub/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=hospitality-hub
 
 server.port=9090
 
-spring.datasource.url=jdbc:mysql://localhost:3306/hospitality-hub?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/hospitality_hub?createDatabaseIfNotExist=true
 spring.datasource.username=root
 spring.datasource.password=Rimesh12345@@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
