--- a/hospitality-hub/src/main/resources/application.properties
+++ b/hospitality-hub/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.port=9090
 
 spring.datasource.url=jdbc:mysql://localhost:3306/hospitality_hub?createDatabaseIfNotExist=true
 spring.datasource.username=root
-spring.datasource.password=Rimesh12345@@
+spring.datasource.password=subrat
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto=update
